--- a/IPlugExamples/IPlugEffect/IPlugEffect.xcconfig
+++ b/IPlugExamples/IPlugEffect/IPlugEffect.xcconfig
@@ -20,7 +20,7 @@ EXTRA_LNK_FLAGS = $(IGRAPHICS_LNK_FLAGS)
 //------------------------------
 // PREPROCESSOR MACROS
 
-EXTRA_ALL_DEFS = OBJC_PREFIX=vIPlugEffect SWELL_APP_PREFIX=Swell_vIPlugEffect GRAPHICS_SCALING
+EXTRA_ALL_DEFS = OBJC_PREFIX=vIPlugEffect SWELL_APP_PREFIX=Swell_vIPlugEffect GRAPHICS_SCALING //IGRAPHICS_NANOVG
 //EXTRA_DEBUG_DEFS =
 //EXTRA_RELEASE_DEFS =
 //EXTRA_TRACER_DEFS =
