--- a/IPlugExamples/IPlugEffect/IPlugEffect.xcodeproj/xcshareddata/xcschemes/APP.xcscheme
+++ b/IPlugExamples/IPlugEffect/IPlugEffect.xcodeproj/xcshareddata/xcschemes/APP.xcscheme
@@ -52,6 +52,8 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
+      enableGPUFrameCaptureMode = "3"
+      enableGPUValidationMode = "1"
       allowLocationSimulation = "YES">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
